tests/ui/ferrocene/compiler-arguments/upper_c_target-cpu/upper_c_target-cpu_space-empty.rs
//@ check-fail
//@ compile-flags: -C target-cpu
//~? ERROR requires a string

fn main() {}

// ferrocene-annotations: um_rustc_C_target_cpu
